--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+# Python 版本要求
+python>=3.6
 
+# 项目依赖
+# 注意：本项目主要使用Python标准库，无需额外安装Python包
+# 但需要安装以下外部工具：
+
+# 必需：7-Zip (用于压缩文件处理)
+# 下载地址：https://www.7-zip.org/
+# 需要添加环境变量
+
+# 可选：WinRAR (备用解压工具)
+# 下载地址：https://www.win-rar.com/
